# slimx

./: README.md
auth/: Cargo.toml
auth/src/: lib.rs
client/: pubspec.yaml
client/integration_test/: simple_test.dart
client/lib/: debug.dart  main.dart
client/lib/src/: app_http_client.dart  app_logger.dart  keys.dart  user.dart
client/lib/src/isar_models/: isar_map_entity.dart  keys.dart  keys.g.dart  message.dart  message.g.dart
client/linux/flutter/: generated_plugins.cmake
client/macos/Runner.xcodeproj/: project.pbxproj
client/rust/: Cargo.toml
client/rust/src/: frb_generated.rs
client/rust/src/api/: mod.rs  simple.rs
client/rust_builder/: pubspec.yaml
client/rust_builder/android/: build.gradle  settings.gradle
client/rust_builder/ios/: rust_lib_client.podspec
client/rust_builder/linux/: CMakeLists.txt
client/rust_builder/macos/: rust_lib_client.podspec
client/rust_builder/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugins.cmake
server/: .env  Cargo.toml
server/migrations/2024-02-10-233853_create_users/: up.sql
server/migrations/2024-02-10-233858_create_conversations/: down.sql  up.sql
server/migrations/2024-02-10-233904_create_perm_keys/: down.sql  up.sql
server/migrations/2024-02-10-233910_create_onetime_keys/: down.sql  up.sql
server/migrations/2024-02-10-233914_create_onetime_pqkem/: down.sql  up.sql
server/migrations/2024-02-10-233921_create_handshakes/: down.sql  up.sql
server/migrations/2024-02-11-043658_create_chats/: down.sql  up.sql
server/migrations/2024-02-11-233858_create_conversations/: up.sql
server/src/: diesel_models.rs  http_models.rs  logger.rs  main.rs  schema.rs  xeddsa.rs
(+21 files in other folders)
