[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"
